Issue #3144 - Fix for dropdown-toggle for broken dropdowns as a result of Bootstrap 5 change for dropdown.

--- a/app/views/paginable/contributors/_index.html.erb
+++ b/app/views/paginable/contributors/_index.html.erb
@@ -45,7 +45,7 @@
               <button class="btn btn-link dropdown-toggle"
                       type="button"
                       id="contributor-<%= contributor.id %>-actions"
-                      data-toggle="dropdown"
+                      data-bs-toggle="dropdown"
                       aria-haspopup="true" aria-expanded="true">
                 <%= _('Actions') %><span class="caret"></span>
               </button>
