--- a/app/views/paginable/plans/_privately_visible.html.erb
+++ b/app/views/paginable/plans/_privately_visible.html.erb
@@ -51,7 +51,7 @@
           <td>
             <div class="dropdown">
               <button class="btn btn-link dropdown-toggle" type="button"
-                      id="plan-<%= plan.id %>-actions" data-toggle="dropdown"
+                      id="plan-<%= plan.id %>-actions" data-bs-toggle="dropdown" 
                       aria-haspopup="true" aria-expanded="true">
                 <%= _('Actions') %><span class="caret"></span>
               </button>
