--- a/app/views/paginable/api_clients/_index.html.erb
+++ b/app/views/paginable/api_clients/_index.html.erb
@@ -34,7 +34,7 @@
                 class="btn btn-link dropdown-toggle"
                 type="button"
                 id="api_client-<%= client.id %>-actions"
-                data-toggle="dropdown"
+                data-bs-toggle="dropdown"
                 aria-haspopup="true"
                 aria-expanded="true">
                 <%= _('Actions') %><span class="caret"></span>
