--- a/app/views/paginable/guidance_groups/_index.html.erb
+++ b/app/views/paginable/guidance_groups/_index.html.erb
@@ -40,7 +40,7 @@
                 class="btn btn-link dropdown-toggle"
                 type="button"
                 id="guidance_group-<%= guidance_gr.id %>-actions"
-                data-toggle="dropdown"
+                data-bs-toggle="dropdown"
                 aria-haspopup="true"
                 aria-expanded="true">
                 <%= _('Actions') %><span class="caret"></span>
