--- a/app/views/paginable/guidances/_index.html.erb
+++ b/app/views/paginable/guidances/_index.html.erb
@@ -46,7 +46,7 @@
                   class="btn btn-link dropdown-toggle"
                   type="button"
                   id="guidance-<%= guidance.id %>-actions"
-                  data-toggle="dropdown"
+                  data-bs-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="true">
                   <%= _('Actions') %><span class="caret"></span>
                 </button>
