--- a/app/views/paginable/research_outputs/_index.html.erb
+++ b/app/views/paginable/research_outputs/_index.html.erb
@@ -43,7 +43,7 @@
               <button class="btn btn-link dropdown-toggle"
                       type="button"
                       id="research_output-<%= output.id %>-actions"
-                      data-toggle="dropdown"
+                      data-bs-toggle="dropdown"
                       aria-haspopup="true" aria-expanded="true">
                 <%= _('Actions') %><span class="caret"></span>
               </button>
