--- a/app/views/paginable/templates/_customisable.html.erb
+++ b/app/views/paginable/templates/_customisable.html.erb
@@ -47,7 +47,7 @@
         </td>
         <td>
           <div class="dropdown">
-            <button class="btn btn-link dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            <button class="btn btn-link dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
               <%= _('Actions') %><span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
