--- a/app/views/notes/_edit.html.erb
+++ b/app/views/notes/_edit.html.erb
@@ -1,7 +1,7 @@
 <%# locals: { note } %>
 <% if !note.nil? %>
     <%= form_for(note, url: note_path(note), method: :put) do |f| %>
-        <div class="form-group">
+        <div class="form-group wysiwyg-block">
             <%= f.label(:text, _('Edit comment to share with collaborators')) %>
             <%= f.text_area(:text, class: 'form-control', id: "note-#{note.id}",
                             spellcheck: true) %>
