--- a/app/views/org_admin/annotations/_form.html.erb
+++ b/app/views/org_admin/annotations/_form.html.erb
@@ -1,5 +1,5 @@
 <fieldset class="annotation_fields" id="<%= unique_dom_id(f.object, "fields") %>">
-  <div class="form-group col-md-10">
+  <div class="form-group col-md-10 wysiwyg-block">
     <% lbl = f.object.type.humanize.downcase == 'example answer' ? _('Example answer') : _('Guidance') %>
     <%= f.label(:type, lbl, class: "control-label") %>
     <div data-toggle="tooltip" title="<%= tooltip_for_annotation_text(f.object) %>">
