updated research output access levels

--- a/app/views/branded/research_outputs/_form.html.erb
+++ b/app/views/branded/research_outputs/_form.html.erb
@@ -136,15 +136,33 @@ repository_tooltip = _("Repositories preserve, manage, and provide access to man
 
   <div class="form-group row">
     <div class="col-md-12">
-      <span class="col-md-4">
-        <%= f.label(:release_date, _("Anticipated release date"), class: "control-label") %>
-        <%= f.date_field :release_date, class: "form-control" %>
+      <span class="col-md-12">
+        <h3><label><%= _("Access to Data/Outputs") %></label></h3>
       </span>
+    </div>
+  </div>
+  <div class="form-group row">
+    <div class="col-md-12">
+      <span class="col-md-12">
+      <%= f.label(:access, _("Initial access level"), class: "control-label") %>
+      </span>
+    </div>
+    <div class="col-md-12">
       <span class="col-md-4">
-        <%= f.label(:access, _("Initial access level"), class: "control-label") %>
         <%= f.select :access, options_for_select(presenter.selectable_access_types, f.object.access),
                               { selected: f.object.access },
                               { class: "form-control" } %>
+      </span>
+      <span class="col-md-6">
+        <%= _('Data in controlled access databases are available to investigators only after review of their proposed research use. Data in unrestricted access databases are publicly available to anyone.') %>
+      </span>
+    </div>
+  </div>
+  <div class="form-group row">
+    <div class="col-md-12">
+      <span class="col-md-4">
+        <%= f.label(:release_date, _("Anticipated release date"), class: "control-label") %>
+        <%= f.date_field :release_date, class: "form-control" %>
       </span>
     </div>
   </div>
