--- a/app/views/branded/contact_us/contacts/_new_left.html.erb
+++ b/app/views/branded/contact_us/contacts/_new_left.html.erb
@@ -36,8 +36,12 @@
     </div>
 <% if !user_signed_in? && Rails.configuration.x.recaptcha.enabled then %>
     <div class="form-group">
-        <%= label_tag(nil, _('Security check')) %>
-        <%= recaptcha_tags %>
+        <% if @show_checkbox_recaptcha %>
+          <%= label_tag(nil, _('Security check')) %>
+          <%= recaptcha_tags %>
+        <% else %>
+          <%= recaptcha_v3(action: 'contact_us') %>
+        <% end %>
     </div>
 <% end %>
     <%= f.button(_('Send'), class: "btn btn-default", type: "submit") %>
