--- a/app/views/branded/shared/_create_account_form.html.erb
+++ b/app/views/branded/shared/_create_account_form.html.erb
@@ -43,8 +43,12 @@
   </div>
   <% if Rails.configuration.x.recaptcha.enabled %>
     <div class="form-group">
-      <%= label_tag(nil, _('Security check')) %>
-      <%= recaptcha_tags %>
+      <% if @show_checkbox_recaptcha %>
+        <%= label_tag(nil, _('Security check')) %>
+        <%= recaptcha_tags %>
+      <% else %>
+        <%= recaptcha_v3(action: 'create_account') %>
+      <% end %>
     </div>
   <% end %>
 
