--- a/app/assets/stylesheets/variables/_bootstrap.scss
+++ b/app/assets/stylesheets/variables/_bootstrap.scss
@@ -12,6 +12,7 @@
 
 // Forms
 $input-border-radius: 0px !default;
+$input-group-addon-padding-x: 0.5rem !default;
 
 
 // Navbar
@@ -27,6 +28,8 @@ $btn-default-color: $color-primary-text !default;
 // Panels
 $panel-border-radius: 0px !default;
 
+// Links
+$link-decoration: none !default;
 
 // from colors:
 
