added ability for reasearcher to add custom repositories and metadata standards

--- a/app/assets/stylesheets/blocks/_modal_dialogs.scss
+++ b/app/assets/stylesheets/blocks/_modal_dialogs.scss
@@ -5,6 +5,15 @@
   background-color: $color-secondary-background;
 }
 
+#add-custom-items {
+  margin-left: 15px;
+}
+
+#item-selected-alert {
+  color: $color-green;
+  font-weight: bold;
+  text-align: center;
+}
 
 // Footer (for actions)
 .modal-footer {
