fix issue with guidance display

--- a/app/views/branded/layouts/modal_search/_form.html.erb
+++ b/app/views/branded/layouts/modal_search/_form.html.erb
@@ -53,8 +53,7 @@ no_results_msg = _("No results matched your filter criteria.")
         </h3>
       </div>
 
-      <!-- Non Dmptool invocations may not define a guidance field -->
-      <% unless guidance.nil? || guidance.to_s.strip.any? %>
+      <% if guidance.present? && !guidence.to_s.strip.empty? %>
         <div class="modal-header">
           <%= sanitize(guidance) %>
         </div>
