updated org admin template prefs page to use same method for adding custom repos and standards

--- a/app/views/branded/layouts/modal_search/_form.html.erb
+++ b/app/views/branded/layouts/modal_search/_form.html.erb
@@ -53,7 +53,7 @@ no_results_msg = _("No results matched your filter criteria.")
         </h3>
       </div>
 
-      <% if guidance.present? && !guidence.to_s.strip.empty? %>
+      <% if guidance.present? && !guidance.to_s.strip.empty? %>
         <div class="modal-header">
           <%= sanitize(guidance) %>
         </div>
