--- a/app/views/branded/org_admin/templates/metadata_standards/_search.html.erb
+++ b/app/views/branded/org_admin/templates/metadata_standards/_search.html.erb
@@ -3,6 +3,10 @@
 <% content_for :"filters-metadata_standards" do %>
 <% end %>
 
+<% content_for :"custom-metadata_standards" do %>
+  <%= render partial: "research_outputs/metadata_standards/custom", locals: { label: _('Template') } %>
+<% end %>
+
 <%= render partial: "layouts/modal_search/form",
            locals: {
              namespace: "metadata_standards",
@@ -12,5 +16,6 @@
              search_path: metadata_standard_search_org_admin_template_path(template),
              search_method: :get,
              guidance: '',
-             preload: false
+             preload: false,
+             allow_custom_entries: true
            } %>
