--- a/app/views/branded/org_admin/templates/preferences_show.html.erb
+++ b/app/views/branded/org_admin/templates/preferences_show.html.erb
@@ -1,9 +1,7 @@
 <div class="row">
   <div class="col-md-12">
     <h1 class='treat-page-as-read-only'><%= _('Template Preferences (VIEW)') %></h1>
-    <%= link_to _('View all templates'),
-        org_admin_templates_path,
-        class: 'btn btn-default pull-right' %>
+    <%= link_to _('View all templates'), referrer, class: 'btn btn-default pull-right' %>
   </div>
 </div>
 
