--- a/app/views/branded/org_admin/templates/repositories/_search.html.erb
+++ b/app/views/branded/org_admin/templates/repositories/_search.html.erb
@@ -27,6 +27,10 @@
   </span>
 <% end %>
 
+<% content_for :"custom-repositories" do %>
+  <%= render partial: "research_outputs/repositories/custom", locals: { label: _('Template') } %>
+<% end %>
+
 <%= render partial: "layouts/modal_search/form",
            locals: {
              namespace: "repositories",
@@ -36,5 +40,6 @@
              search_path: repository_search_org_admin_template_path(template),
              search_method: :get,
              guidance: '',
-             preload: false
+             preload: false,
+             allow_custom_entries: true
            } %>
