--- a/app/views/branded/org_admin/templates/repositories/_search_result.html.erb
+++ b/app/views/branded/org_admin/templates/repositories/_search_result.html.erb
@@ -64,8 +64,8 @@
 
         <dt><%= _("Data upload") %></dt>
         <dd>
-          <% result.info.fetch("upload_types", [{ type: _("Unknown") }]).each do |upload_type| %>
-            <%= upload_type.fetch("type", _("Unknown")).humanize %>: <%= upload_type["restriction"].gsub("registration", "").underscore.humanize %>
+          <% result.info.fetch("upload_types", [JSON.parse({ type: _("Unknown"), restriction: '' }.to_json)]).each do |upload_type| %>
+            <%= upload_type.fetch("type", _("Unknown")).humanize %>: <%= upload_type.fetch("restriction", '')&.gsub("registration", "")&.underscore&.humanize %>
           <% end %>
         </dd>
 
